--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.0.0",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "karma-spec-reporter": "0.0.26"
   }
 }
